tests/ui/conf_unknown_key.stderr
error[E0658]: compiler plugins are experimental and possibly buggy (see issue #29597)
 --> $DIR/conf_unknown_key.rs:4:1
  |
4 | #![plugin(clippy(conf_file="../auxiliary/conf_unknown_key.toml"))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: add #![feature(plugin)] to the crate attributes to enable

error: aborting due to previous error

